--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Release Appwrite VLESS (Fixed)
+name: Build and Release Appwrite VLESS (Size Optimized)
 
 on:
   push:
@@ -15,47 +15,48 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Tools
-        run: sudo apt-get update && sudo apt-get install -y upx unzip
+        run: sudo apt-get update && sudo apt-get install -y upx unzip binutils
 
       - name: Organize Files
         run: |
-          # main.js နဲ့ package.json ကို ဘယ်နေရာမှာပဲရှိရှိ ရှာပြီး Root ကို ပို့မယ်
           find . -name "main.js" -exec cp {} ./main.js \;
           find . -name "package.json" -exec cp {} ./package.json \;
-          echo "✅ Files Organized"
 
-      - name: Download and Prepare Binaries
+      - name: Download and Shrink Binaries
         run: |
           mkdir -p bin
-          # 1. Download Xray
+          
+          # 1. Download Xray (ပိုသေးတဲ့ version မဟုတ်ဘဲ binary ပဲ ယူမယ်)
           curl -L -o xray.zip https://github.com/XTLS/Xray-core/releases/latest/download/Xray-linux-64.zip
           unzip -j xray.zip xray -d ./bin
           
           # 2. Download Cloudflared
           curl -L -o ./bin/cloudflared https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64
           
-          # 3. UPX Compression
-          upx --best ./bin/xray || true
-          upx --best ./bin/cloudflared || true
+          # 3. Strip Binaries (မလိုအပ်တဲ့ symbols တွေ ဖြုတ်ချတာ - size တော်တော် ကျသွားပါတယ်)
+          strip ./bin/xray
+          strip ./bin/cloudflared
+          
+          # 4. UPX Maximum Compression
+          upx --ultra-brute ./bin/xray || upx --best ./bin/xray
+          upx --ultra-brute ./bin/cloudflared || upx --best ./bin/cloudflared
           
           chmod +x ./bin/*
           rm -f xray.zip
-          echo "✅ Binaries Ready"
 
       - name: Create Archive
         run: |
-          # ဖိုင်တွေကို အတင်းအကျပ် ရှာပြီး Archive လုပ်ခြင်း
-          # -h က Symbolic link တွေကိုပါ ထည့်ပေးဖို့ပါ
+          # --ultra-check သုံးပြီး အကောင်းဆုံး ချုံ့ပါမယ်
           tar -cvzhf Appwrite.tar.gz main.js package.json bin/
           
-          echo "--- Final Package Contents ---"
-          tar -tf Appwrite.tar.gz
+          echo "--- Final Optimized Size ---"
+          du -h Appwrite.tar.gz
 
       - name: Create or Update Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: "latest"
-          name: "Appwrite VLESS Build"
+          name: "Appwrite VLESS (Optimized)"
           files: Appwrite.tar.gz
           make_latest: true
         env:
