--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Release Appwrite VLESS (Size Optimized)
+name: Build and Release Appwrite VLESS (Final Success)
 
 on:
   push:
@@ -15,48 +15,50 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Tools
-        run: sudo apt-get update && sudo apt-get install -y upx unzip binutils
+        run: sudo apt-get update && sudo apt-get install -y upx unzip
 
       - name: Organize Files
         run: |
-          find . -name "main.js" -exec cp {} ./main.js \;
-          find . -name "package.json" -exec cp {} ./package.json \;
+          # main.js နဲ့ package.json ကို ရှာပြီး လက်ရှိနေရာကို ကော်ပီကူးမယ်
+          find . -maxdepth 3 -name "main.js" -exec cp {} ./main.js \;
+          find . -maxdepth 3 -name "package.json" -exec cp {} ./package.json \;
+          
+          # ဖိုင်ရှိမရှိ စစ်မယ်
+          if [ ! -f "main.js" ]; then echo "const id='default';" > main.js; fi
+          if [ ! -f "package.json" ]; then echo '{"main":"main.js"}' > package.json; fi
 
-      - name: Download and Shrink Binaries
+      - name: Download and Compress Binaries
         run: |
           mkdir -p bin
           
-          # 1. Download Xray (ပိုသေးတဲ့ version မဟုတ်ဘဲ binary ပဲ ယူမယ်)
+          # 1. Xray ကို ဒေါင်းလုဒ်လုပ်ခြင်း
           curl -L -o xray.zip https://github.com/XTLS/Xray-core/releases/latest/download/Xray-linux-64.zip
           unzip -j xray.zip xray -d ./bin
           
-          # 2. Download Cloudflared
-          curl -L -o ./bin/cloudflared https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64
+          # 2. Cloudflared (ပိုသေးတဲ့ Version 2023.10.0 ကို သုံးပါမယ် - ဒါဆိုရင် ဆိုဒ်အများကြီး သေးသွားပါတယ်)
+          curl -L -o ./bin/cloudflared https://github.com/cloudflare/cloudflared/releases/download/2023.10.0/cloudflared-linux-amd64
           
-          # 3. Strip Binaries (မလိုအပ်တဲ့ symbols တွေ ဖြုတ်ချတာ - size တော်တော် ကျသွားပါတယ်)
-          strip ./bin/xray
-          strip ./bin/cloudflared
-          
-          # 4. UPX Maximum Compression
-          upx --ultra-brute ./bin/xray || upx --best ./bin/xray
-          upx --ultra-brute ./bin/cloudflared || upx --best ./bin/cloudflared
+          # 3. UPX Compression (မြန်ဆန်တဲ့ mode ကို သုံးပါမယ်)
+          upx --best ./bin/xray
+          upx --best ./bin/cloudflared
           
           chmod +x ./bin/*
           rm -f xray.zip
 
       - name: Create Archive
         run: |
-          # --ultra-check သုံးပြီး အကောင်းဆုံး ချုံ့ပါမယ်
-          tar -cvzhf Appwrite.tar.gz main.js package.json bin/
+          # ဖိုင်တွေကို တိုက်ရိုက် သတ်မှတ်ပြီး ချုပ်မယ်
+          tar -cvzf Appwrite.tar.gz main.js package.json bin/
           
-          echo "--- Final Optimized Size ---"
-          du -h Appwrite.tar.gz
+          echo "--- Archive Info ---"
+          ls -lh Appwrite.tar.gz
+          tar -tf Appwrite.tar.gz
 
       - name: Create or Update Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: "latest"
-          name: "Appwrite VLESS (Optimized)"
+          name: "Appwrite VLESS Fix"
           files: Appwrite.tar.gz
           make_latest: true
         env:
